text overflow on home page cards fixed

--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -149,5 +149,6 @@ footer{
     border-radius: $double-round-border;
     margin: 5px;
     text-decoration: lightness($color: white);
+    width: fit-content!important;
     // color: white;
 }
